--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,13 @@ div#content-holder div img {
     background-position: center;
 }
 
+div.fb-like {
+    margin-top: 30px;
+    position: absolute;
+    display: inline-block;
+    margin-left: -25px;
+}
+
 @media screen and (min-width: 1300px) {
     #accent-holder img {
         margin-top: -30%;
