--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,24 @@ div.fb-like {
         margin-top: -24%;
     }
 }
+
+@media screen and (max-width: 1400px) {
+    div#featured-product {
+        margin-left: 145px;
+        width: 27%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    div#featured-product {
+        height: 42%;
+        margin-top: 90px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    div#featured-product {
+        height: 42%;
+        margin-top: 90px;
+    }
+}
