--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html,
+    html,
 body {
     margin: 0px;
     padding: 0px;
@@ -100,9 +100,7 @@ div#banner-holder img {
     opacity: 0.5;
 }
 
-div#content-holder {
-    
-}
+div#content-holder {}
 
 div#content-holder div.left-side,
 div#content-holder img {
@@ -115,7 +113,7 @@ div#content-holder img {
 div#featured-product {
     position: absolute;
     display: inline-block;
-    height: 45%;
+    height: 50%;
     width: 26%;
     max-width: 375px;
     margin-left: 135px;
@@ -162,7 +160,8 @@ div#content-holder div img {
     background-position: center;
 }
 
-#left-frame, #right-frame {
+#left-frame,
+#right-frame {
     width: 17%;
     height: 285px;
 }
@@ -204,14 +203,39 @@ div.fb-like {
 
 @media screen and (max-width: 1200px) {
     div#featured-product {
-        height: 42%;
+        height: 44%;
         margin-top: 90px;
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
     div#featured-product {
-        height: 42%;
+        height: 40%;
         margin-top: 90px;
+        width: 30%;
+    }
+}
+
+
+/* iphone 6 portrait */
+
+@media only screen and (max-device-width: 667px) {
+    div#featured-product {
+        height: 30%;
+        margin-left: 140px;
+    }
+    #left-frame,
+    #right-frame {
+        margin-top: 35px;
+        height: 250px;
+        margin-right: -10px;
+    }
+    #middle-frame {
+        margin-top: 25px;
+        height: 275px;
+    }
+    div#press-holder a img {
+        width: 75%;
+        min-width: 500px;
     }
 }
