--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,10 @@ div#content-holder div img {
 #accent-holder img {
     display: inline-block;
     max-width: 1200px;
-    margin-top: -35%;
-    width: 90%
+    margin-top: -25%;
+    width: 90%;
+    z-index: 0;
+    position: relative;
 }
 
 #insta-photo {
@@ -179,7 +181,7 @@ div.fb-like {
     margin-top: 30px;
     position: absolute;
     display: inline-block;
-    margin-left: -25px;
+    margin-left: 200px;
 }
 
 @media screen and (min-width: 1300px) {
@@ -213,6 +215,9 @@ div.fb-like {
         height: 40%;
         margin-top: 90px;
         width: 30%;
+    }
+    div.fb-like { 
+        margin-left: 150px;
     }
 }
 
@@ -262,4 +267,33 @@ div#our-story span {
     top: 20px;
     right: 25px;
     cursor: pointer;
+}
+
+div#retailer-wrapper {
+    background-color: #F4E7CF;
+    display: none;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 9999;
+    text-align: center;
+}
+
+div#retailer-wrapper a {
+    color: #007399;
+    cursor: pointer;
+}
+
+div#press-wrapper {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: #F4E7CF;
+    text-align: center;
+    position: absolute;
+}
+
+div#press-wrapper img {
+    display: inline-block;
+    max-width: 75%;
 }
