--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-    html,
+html,
 body {
     margin: 0px;
     padding: 0px;
@@ -47,7 +47,7 @@ div#banner-holder img {
     position: absolute;
     margin-top: -23px;
     font-weight: 100;
-    font-size: .75em;
+    font-size: 1em;
 }
 
 #navbar-holder {
@@ -67,17 +67,6 @@ div#banner-holder img {
     display: inline-block;
 }
 
-#press-holder {
-    text-align: center;
-}
-
-#press-holder img {
-    width: 90%;
-    max-width: 1000px;
-    margin: 25px 0px;
-    min-width: 1000px;
-}
-
 #photos-holder div#frames {
     width: 90%;
     max-width: 1000px;
@@ -89,13 +78,11 @@ div#banner-holder img {
 #photos-holder div img {
     width: 32%;
     display: inline-block;
-    cursor: pointer;
     display: inline-block;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
 }
 
-#press-holder img:hover,
 #where:hover {
     opacity: 0.5;
 }
@@ -113,8 +100,8 @@ div#content-holder img {
 div#featured-product {
     position: absolute;
     display: inline-block;
-    height: 50%;
-    width: 26%;
+    height: 500px;
+    width: 400px;
     max-width: 375px;
     margin-left: 135px;
     margin-top: 110px;
@@ -131,15 +118,110 @@ div#featured-product {
 
 div#content-holder div img {
     width: 100%;
+    z-index: 999;
+    position: relative;
 }
 
-#accent-holder img {
+div#accent-holder {
+    width: 100%;
+    position: absolute;
     display: inline-block;
-    max-width: 1200px;
-    margin-top: -25%;
+    text-align: center;
+}
+
+img#accent {
     width: 90%;
+    position: absolute;
+    margin-top: -300px;
     z-index: 0;
-    position: relative;
+    max-width: 1200px;
+    margin-left: -45%;
+    min-width: 900px;
+}
+
+div#press-holder {
+    margin-top: 165px;
+}
+
+@media screen and (min-width: 1100px) {
+    img#accent {
+        margin-left: -44.5%;
+    }
+    div#press-holder {
+        margin-top: 165px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    div#press-holder {
+        margin-top: 250px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    img#accent {
+        margin-left: -44%;
+    }
+}
+
+@media screen and (min-width: 1350px) {
+    img#accent {
+        margin-left: -43%;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    img#accent {
+        margin-left: -42%;
+    }
+}
+
+@media screen and (min-width: 1450px) {
+    img#accent {
+        margin-left: -40%;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    img#accent {
+        margin-left: -37%;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    img#accent {
+        margin-left: -36%;
+    }
+}
+
+@media screen and (min-width: 1700px) {
+    img#accent {
+        margin-left: -34%;
+    }
+}
+
+@media screen and (min-width: 1700px) {
+    img#accent {
+        margin-left: -33%;
+    }
+}
+
+@media screen and (min-width: 1700px) {
+    img#accent {
+        margin-left: -32.5%;
+    }
+}
+
+@media screen and (min-width: 1750px) {
+    img#accent {
+        margin-left: -32%;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    img#accent {
+        margin-left: -30.5%;
+    }
 }
 
 #insta-photo {
@@ -184,18 +266,6 @@ div.fb-like {
     margin-left: 200px;
 }
 
-@media screen and (min-width: 1300px) {
-    #accent-holder img {
-        margin-top: -30%;
-    }
-}
-
-@media screen and (min-width: 1500px) {
-    #accent-holder img {
-        margin-top: -24%;
-    }
-}
-
 @media screen and (max-width: 1400px) {
     div#featured-product {
         margin-left: 145px;
@@ -205,18 +275,18 @@ div.fb-like {
 
 @media screen and (max-width: 1200px) {
     div#featured-product {
-        height: 44%;
+        height: 500px;
         margin-top: 90px;
     }
 }
 
 @media screen and (max-width: 1100px) {
     div#featured-product {
-        height: 40%;
+        height: 425px;
         margin-top: 90px;
-        width: 30%;
+        width: 28%;
     }
-    div.fb-like { 
+    div.fb-like {
         margin-left: 150px;
     }
 }
@@ -239,11 +309,15 @@ div.fb-like {
         margin-top: 25px;
         height: 275px;
     }
-    div#press-holder a img {
+    #press-holder img:first-child {
+        margin-top: 175px;
+    }
+    div#press-holder img#press-header {
         width: 75%;
         min-width: 500px;
     }
 }
+
 
 /* our story video */
 
@@ -287,13 +361,64 @@ div#retailer-wrapper a {
 div#press-wrapper {
     display: inline-block;
     width: 100%;
-    height: 100%;
     background-color: #F4E7CF;
     text-align: center;
-    position: absolute;
 }
 
-div#press-wrapper img {
+img#press-header {
     display: inline-block;
-    max-width: 75%;
+    width: 95%;
+    max-width: 1200px;
+    margin-top: 75px;
+    margin-bottom: 50px;
+}
+
+img#where {
+    cursor: pointer;
+}
+
+div#press-articles {
+    width: 75%;
+    max-width: 1200px;
+}
+
+div.press-article {
+    display: inline-block;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 50px;
+}
+
+div.press-article h1 {
+    margin-top: 0px;
+    font-family: 'Jacques Francois Shadow', cursive;
+}
+
+div.press-article p {
+    font-family: 'Courier';
+    font-size: 1em;
+}
+
+img.press-image {
+    display: inline-block;
+    height: 250px;
+    float: left;
+    margin-right: 25px;
+    margin-bottom: 15px;
+    margin-top: 7px;
+}
+
+span.press-date {
+    font-size: .75em;
+    font-weight: 100;
+    font-family: 'Courier';
+}
+
+span#copyright {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 15px;
+    font-size: 0.75em;
+    line-height: 15px;
 }
