--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ div#banner-holder img {
     width: 100%;
     height: 125px;
     margin-top: -4px;
-    background-image: url('../img/nav-bg.png');
+    background-image: url('../img/nav-bg-blue.png');
     background-size: cover;
     border-bottom: solid 5px rgba(0, 0, 0, 0.5);
     border-top: solid 5px rgba(0, 0, 0, 0.5);
@@ -244,7 +244,7 @@ div#press-holder {
 #left-frame,
 #right-frame {
     width: 17%;
-    height: 285px;
+    height: 280px;
 }
 
 #middle-frame {
@@ -340,25 +340,11 @@ div#our-story span {
     cursor: pointer;
 }
 
-div#retailer-wrapper {
+div#retailer-wrapper, div#contact-us {
     background-color: #F4E7CF;
-    background-image: url(../img/become_retailer_bg.png);
+    background-image: url(../img/paper.png);
     background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: top center;
-    display: none;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    z-index: 9999;
-    padding: 25% 25px 0px 25px;
-}
-
-div#contact-us {
-    background-color: #F4E7CF;
-    background-image: url(../img/contact_bg.png);
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: cover;
     background-position: top center;
     display: none;
     position: fixed;
@@ -366,6 +352,41 @@ div#contact-us {
     width: 100%;
     z-index: 9999;
     padding: 25px;
+}
+
+div#retailer-wrapper div {
+    position: absolute;
+    z-index: 99;
+    background-color: rgba(255,255,255,0.75);
+    padding: 25px;
+    border-radius: 25px;
+}
+
+div#contact-us div {
+    position: relative;
+    z-index: 99;
+    background-color: rgba(255,255,255,0.75);
+    padding: 25px;
+    border-radius: 25px;
+    display: inline-block;
+    width: 400px;
+}
+
+img#retail-girl {
+    position: absolute;
+    bottom: 0px;
+    right: 25px;
+    z-index: 1;
+}
+
+img#contact-man {
+    position: absolute;
+    bottom: 0px;
+    right: 25px;
+    z-index: 1;
+}
+
+div#contact-us {
     text-align: center;
 }
 
@@ -462,4 +483,54 @@ div#press-article-3 img {
 
 img#press-header {
     max-width: 100%;
+}
+
+@keyframes pointer-hand {
+    from {
+        bottom: 15%;
+    }
+    to {
+        bottom: 0px;
+    }
+}
+
+div#scroll-down {
+    display: none;
+    position: fixed;
+    bottom: 0px;
+    left: 80%;
+}
+
+div#scroll-down div {
+    height: 500px;
+    position: relative;
+}
+
+div#scroll-down div img {
+    z-index: 9999;
+    width: 200px;
+    position: absolute;
+    animation-name: pointer-hand;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease;
+    animation-direction: alternate;
+}
+
+form#contact-us-form input {
+    display: block;
+}
+
+form#contact-us-form {
+    margin-bottom: 25px;
+}
+
+form#contact-us-form textarea {
+    margin: 5px;
+    border: none;
+    padding: 5px;
+    border-radius: 3px;
+    width: 75%;
+    max-width: 250px;
+    height: 100px;
 }
