--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,6 @@ div#retailer-wrapper, div#contact-us {
     height: 100%;
     width: 100%;
     z-index: 9999;
-    padding: 25px;
 }
 
 div#retailer-wrapper div {
@@ -373,7 +372,7 @@ div#contact-us div {
     padding: 25px;
     border-radius: 25px;
     display: inline-block;
-    width: 400px;
+    width: 800px;
 }
 
 img#retail-girl {
@@ -388,6 +387,17 @@ img#contact-man {
     bottom: 0px;
     right: 25px;
     z-index: 1;
+    max-width: 25%;
+}
+
+#close-contact {
+    background-color: #007399;
+    padding: 15px;
+    border-bottom-right-radius: 5px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    color: #fff;
 }
 
 div#contact-us {
@@ -542,4 +552,26 @@ form#contact-us-form textarea {
 img#retail-stockist {
     display: block;
     margin-bottom: -5px;
+}
+
+#coming-soon {
+    background-image: url('../img/paper.png');
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    font-size: 5em;
+    font-family: 'Jacques Francois Shadow', cursive;
+}
+
+#coming-soon h1 {
+    margin-top: 25px;
+}
+
+#coming-soon-man {
+    position: absolute;
+    bottom: 0px;
+    margin-left: -25%;
+    max-height: 50%;
 }
